--- a/tests/demo/CMakeLists.txt
+++ b/tests/demo/CMakeLists.txt
@@ -1,49 +1,28 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
 
-PROJECT (engine VERSION 0.0.1)
-
-SET(BUILD_TESTING flase)
-
-SET(PROJECT_ROOT_DIR ${PROJECT_SOURCE_DIR})
-
-# 外部库
-ADD_SUBDIRECTORY(deps)
-
-# 应用程序
-ADD_SUBDIRECTORY(tests)
-
-#跨平台测试
-IF(WIN32)
-    MESSAGE("WIN32")
-ELSE(UNIX AND APPLE)
-    MESSAGE("MacOS")
-ELSE(UNIX)
-    MESSAGE("Linux")
-ENDIF()
+PROJECT (demo)
 
 #指定头文件路径
-INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/deps)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/core)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/tools)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 
 #读取Src目录
 AUX_SOURCE_DIRECTORY(src DIR_SRCS)
-AUX_SOURCE_DIRECTORY(src/core DIR_SRCS)
-AUX_SOURCE_DIRECTORY(src/tools DIR_SRCS)
 
-#编译文件
-ADD_LIBRARY(${PROJECT_NAME} ${DIR_SRCS})
-
-#输出路径
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)
+ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} )
 
 #链接库
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} engine)
+
+#输出路径
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)
 
 #拷贝资源
 FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
 # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
+
 
 #设置编译选项
 if(WIN32)
