--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ ADD_SUBDIRECTORY(tests)
 #跨平台测试
 IF(WIN32)
     MESSAGE("WIN32")
-ELSE(UNIX AND APPLE)
+ELSEIF(APPLE)
     MESSAGE("MacOS")
-ELSE(UNIX)
+ELSEIF(UNIX)
     MESSAGE("Linux")
 ENDIF()
 
@@ -39,17 +39,28 @@ ADD_LIBRARY(${PROJECT_NAME} ${DIR_SRCS})
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)
 
 #链接库
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
+IF(WIN32)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
+ELSEIF(APPLE)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
+ELSEIF(UNIX)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GL glfw3 glad uuid pthread dl X11 Xi Xrandr Xxf86vm Xcursor Xinerama)
+ENDIF()
 
 #拷贝资源
 FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
 # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
 
 #设置编译选项
-if(WIN32)
-    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -Wall")
-    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -Wall")
-elseif(UNIX)
-    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -Wall -g")
-    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -O3 -Wall")
-endif()
+IF(WIN32)
+    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
+    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
+
+ELSEIF(APPLE)
+    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -O0 -Wall -g")
+    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -O3 -Wall")
+
+ELSEIF(UNIX)
+    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -O0 -Wall -g")
+    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -O3 -Wall")
+ENDIF()
