--- a/tests/demo/CMakeLists.txt
+++ b/tests/demo/CMakeLists.txt
@@ -3,6 +3,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
 PROJECT (demo)
 
 #指定头文件路径
+INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/deps)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/core)
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/tools)
