--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ SET(BUILD_TESTING flase)
 
 SET(PROJECT_ROOT_DIR ${PROJECT_SOURCE_DIR})
 
+# 默认Debug 模式
+SET(CMAKE_BUILD_TYPE "Debug")
+
 # 外部库
 ADD_SUBDIRECTORY(deps)
 
@@ -53,6 +56,7 @@ FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin
 
 #设置编译选项
 IF(WIN32)
+    # DEBUG RELEASE
     SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
     SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
 
