--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)
 IF(WIN32)
     TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
 ELSEIF(APPLE)
-    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} glfw3 glad pthread)
 ELSEIF(UNIX)
     TARGET_LINK_LIBRARIES(${PROJECT_NAME} GL glfw3 glad pthread dl X11 Xi Xrandr Xxf86vm Xcursor Xinerama)
 ENDIF()
