--- a/tests/demo/CMakeLists.txt
+++ b/tests/demo/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
 
-PROJECT (demo)
+PROJECT (demo VERSION 1.0.1)
 
 #指定头文件路径
 INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/deps)
